--- a/sobre.html
+++ b/sobre.html
@@ -28,13 +28,13 @@
   
     <section>
       <h2>Valores</h2>
-      <ul>
-        <li><strong>Inovação</strong>: Buscamos constantemente novas formas de agregar valor aos negócios através da tecnologia.</li>
-        <li><strong>Excelência</strong>: Entregamos soluções de alta qualidade, com atenção aos detalhes e foco no cliente.</li>
-        <li><strong>Compromisso</strong>: Estamos comprometidos com o sucesso de nossos parceiros, acompanhando de perto cada fase do processo.</li>
-        <li><strong>Segurança</strong>: Priorizamos a proteção e integridade dos dados e sistemas de nossos clientes.</li>
-        <li><strong>Colaboração</strong>: Acreditamos que grandes resultados são fruto de trabalho em equipe, tanto internamente quanto com nossos clientes.</li>
-      </ul>
+  
+        <p><strong>Inovação</strong>: Buscamos constantemente novas formas de agregar valor aos negócios através da tecnologia.</p>
+        <p><strong>Excelência</strong>: Entregamos soluções de alta qualidade, com atenção aos detalhes e foco no cliente.</p>
+        <p><strong>Compromisso</strong>: Estamos comprometidos com o sucesso de nossos parceiros, acompanhando de perto cada fase do processo.</p>
+        <p><strong>Segurança</strong>: Priorizamos a proteção e integridade dos dados e sistemas de nossos clientes.</p>
+        <p><strong>Colaboração</strong>: Acreditamos que grandes resultados são fruto de trabalho em equipe, tanto internamente quanto com nossos clientes.</p>
+  
     </section>
   
     <section>
