--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>NormaTech | Soluções em Tecnologia</title>
   <link rel="icon" type="image/png" href="imagens/favicon.png">
   <link rel="stylesheet" href="css/estilo.css">
+  <meta name="google-site-verification" content="rNUgqT3gV15KZR5kdtdTSGB0z86nD0-2phcKkEDWms0" />
 </head>
 <body>
 
